src/objects/IEC_Product_Access__c.object
<CustomObject>
    <description>Object representing an access given to a customer for a Product</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uncheck to remove customer access to the related product</description>
        <inlineHelpText>Uncheck to remove customer access to the related product</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>End datetime of the access to the product</description>
        <inlineHelpText>End datetime of the access to the product</inlineHelpText>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>Start datetime of the access to the product</description>
        <inlineHelpText>Start datetime of the access to the product</inlineHelpText>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Number of the invoice</description>
        <inlineHelpText>Number of the invoice</inlineHelpText>
        <label>Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact being granted access to a Product/application</description>
        <inlineHelpText>Contact being granted access to a Product/application</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IEC Product Accesses</relationshipLabel>
        <relationshipName>IEC_Product_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Rate_Plan_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product Rate Plan Information that was purchased</description>
        <inlineHelpText>The Product Rate Plan Information that was purchased</inlineHelpText>
        <label>Related Rate Plan Info</label>
        <referenceTo>Product_Rate_Plan_Information__c</referenceTo>
        <relationshipLabel>IEC Product Accesses</relationshipLabel>
        <relationshipName>IEC_Product_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Number__c</fullName>
        <description>Number of the Subscription</description>
        <inlineHelpText>Number of the Subscription</inlineHelpText>
        <label>Subscription Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Qty_Left__c</fullName>
        <description>Current usage left</description>
        <inlineHelpText>Current usage left</inlineHelpText>
        <label>Usage Qty Left</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Qty_Start__c</fullName>
        <description>Quantity initially allowed when the subscription is purchased</description>
        <inlineHelpText>Quantity initially allowed when the subscription is purchased</inlineHelpText>
        <label>Usage Qty Start</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Qty_consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tracks the quantity consumed (incremented) related to a specific subscription</description>
        <inlineHelpText>Tracks the quantity consumed (incremented) related to a specific subscription</inlineHelpText>
        <label>Usage Qty consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Unlimited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if allowed usage is unlimited</description>
        <inlineHelpText>Check if allowed usage is unlimited</inlineHelpText>
        <label>Usage Unlimited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora_Subscription_Id__c</fullName>
        <description>Zuora Id of the Subscription. A unique ID is given to every subscription versions</description>
        <inlineHelpText>Zuora Id of the Subscription. A unique ID is given to every subscription versions</inlineHelpText>
        <label>Zuora Subscription Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>IEC Product Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_Contact__c</columns>
        <columns>Related_Rate_Plan_Info__c</columns>
        <columns>Active__c</columns>
        <columns>Usage_Unlimited__c</columns>
        <columns>Usage_Qty_consumed__c</columns>
        <columns>Usage_Qty_Left__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>IEC Product Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC Product Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>